# subscribe

./: .env  .gitignore  Dockerfile-app  Dockerfile-base  Dockerfile-base-dev  README.md  build-base.sh  client_secret.json.asc  docker-compose-dev.yml  main.py  pyproject.toml  restart_app.sh  setting.py.asc  setting_sample.py  start_app.sh  start_celery.sh  start_worker.sh
.github/workflows/: build_image.yml  pytest.yml
celery_task/: celery.py  task_ga.py  task_mail_sys.py
models/: base.py  index.py  subscriberdb.py
module/: awsses.py  ga.py  sender.py  subscriber.py  utils.py
nginx/: Dockerfile  nginx.conf
nginx/sites/: subscribe-dev.conf
templates/: admin_subscriber.html  admin_subscriber_add.html  admin_subscriber_list.html  admin_subscriber_open.html  base.html  base_subscribe.html  index.html  subscribe_coscup.html  subscriber.html  subscriber_error.html  subscriber_intro.html  subscriber_verify_mail.html
templates/mail/: coscup_base.html  coscup_subscribe_login_code.html  coscup_subscribe_verify_mail.html
view/: admin_subscriber.py  reader.py  subscribe.py  subscriber.py  trello.py
