[tool.poetry]
name = "coscupsecretary2020"
version = "24.01.25"
description = ""
authors = ["Toomore Chiang <toomore0929@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.89.0"
google-auth = "^2.20.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.0.0"
arrow = "^1.2.3"
blinker = "^1.6.2"
boto3 = "^1.26.154"
celery = "<6"
Flask = "^3.0.0"
Markdown = "^3.4.3"
phonenumbers = "^8.13.14"
pylibmc = "^1.6.3"
pymongo = "^4.3.3"
requests = "^2.31.0"
uWSGI = "^2.0.21"
certifi = "*"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
mypy = "^1.3.0"
pylint = "^3"
types-requests = "^2.31.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# https://githb.com/PyCQA/isort/wiki/isort-Settings
[tool.isort]
virtual_env = "./.venv"

[tool.mypy]
# --strict
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
# --strict end

[[tool.mypy.overrides]]
module = [
    'apiclient',
    'celery.*',
    'celery_task.*',
    'google_auth_oauthlib.*',
    'kombu',
]
# TODO: Need to fix this for typing hint
ignore_missing_imports = true
disallow_untyped_decorators = false

[tool.pylint.main]
extension-pkg-whitelist = "pydantic"
init-hook="import os, sys; sys.path.insert(0, os.getcwd())"
good-names="i,j,k,ex,Run,_,id"

[tool.pylint."messages control"]
disable = ["W0223", "E1101", "E0611"]

[tool.pylint.typecheck]
generated-members = ["setting", "googleapiclient.discovery.*", "pymongo"]
